<resources>
    <string name="app_name">wanAndroid</string>
    <string name="mine">我的</string>
    <string name="knowledge">知识</string>
    <string name="question">问答</string>
    <string name="home">首页</string>
    <string name="user_name">请输入账号</string>
    <string name="pasWord">请输入密码</string>
    <string name="digits">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="register">注册</string>
    <string name="uid">ID %s</string>
</resources>