<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="cn.laitt.wanandroid.module.home.ui.fragment.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_question"
        android:name="cn.laitt.wanandroid.module.question.ui.fragment.QuestionFragment"
        android:label="@string/question"
        tools:layout="@layout/fragment_question" />

    <fragment
        android:id="@+id/navigation_knowledge"
        android:name="cn.laitt.wanandroid.module.mine.ui.fragment.KnowledgeFragment"
        android:label="@string/knowledge"
        tools:layout="@layout/fragment_knowledge" />
    <fragment
        android:id="@+id/navigation_mine"
        android:name="cn.laitt.wanandroid.module.mine.ui.fragment.MineFragment"
        android:label="@string/mine"
        tools:layout="@layout/fragment_mine" />
</navigation>