<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F7D6D6"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="60dp"
                    android:src="@mipmap/login_bg"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    app:layout_constraintTop_toBottomOf="@id/iv" />

                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:padding="@dimen/dp12"
                    android:src="@mipmap/icon_close"
                    android:tint="@color/white"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/white"
                    tools:ignore="UseAppTint" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="-16dp"
                android:background="@drawable/bg_login_corners"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <EditText
                        android:id="@+id/et_userName"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_margin="16dp"
                        android:background="@drawable/bg_login_et"
                        android:digits="@string/digits"
                        android:hint="请输入用户名"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:textColor="#111111"
                        android:textColorHint="#9B8B8B"
                        android:textSize="@dimen/sp16" />

                    <ImageView
                        android:id="@+id/iv_clear_user"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|center"
                        android:layout_marginRight="32dp"
                        android:padding="12dp"
                        android:src="@mipmap/icon_delete"
                        android:visibility="invisible" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_passWord"
                        android:layout_width="match_parent"
                        android:layout_height="52dp"
                        android:layout_margin="16dp"
                        android:background="@drawable/bg_login_et"
                        android:digits="@string/digits"
                        android:hint="@string/pasWord"
                        android:inputType="textPassword"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:textColor="#111111"
                        android:textColorHint="#9B8B8B"
                        android:textSize="@dimen/sp16" />

                    <ImageView
                        android:id="@+id/iv_show_pwd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|center"
                        android:layout_marginRight="32dp"
                        android:padding="12dp"
                        android:src="@drawable/selector_login_password" />

                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_passWord_enter"
                        android:layout_width="match_parent"
                        android:layout_height="52dp"
                        android:layout_margin="16dp"
                        android:background="@drawable/bg_login_et"
                        android:digits="@string/digits"
                        android:hint="请再次输入密码"
                        android:inputType="textPassword"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:textColor="#111111"
                        android:textColorHint="#9B8B8B"
                        android:textSize="@dimen/sp16" />

                    <ImageView
                        android:id="@+id/iv_show_pwd_enter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|center"
                        android:layout_marginRight="32dp"
                        android:padding="12dp"
                        android:src="@drawable/selector_login_password" />

                </FrameLayout>

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_margin="16dp"
                    android:background="@drawable/selector_login_btn"
                    android:enabled="true"
                    android:text="@string/register"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp18" />


            </LinearLayout>


        </LinearLayout>

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/progress"
            style="@style/Base.Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>
</layout>